--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load staticfiles %}
 
 {% block content %}
@@ -6,32 +7,32 @@
 
   <div class="page-header">
     <h1>
-      Bounty <small>on {{ bounty.destination_character }} - {{ bounty.destination_realm_display }}</small>
+      {% trans "Bounty" %} <small>{% trans "on" %} {{ bounty.destination_character }} - {{ bounty.destination_realm_display }}</small>
       {% if bounty.user == user.pk %}
-        <a class="btn btn-warning btn-xs" href="{% url 'bounty-add' %}?update={{ bounty.id }}">Edit</a>
+        <a class="btn btn-warning btn-xs" href="{% url 'bounty-add' %}?update={{ bounty.id }}">{% trans "Edit" %}</a>
       {% endif %}
     </h1>
   </div>
 
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h3 class="panel-title">Details</h3>
+      <h3 class="panel-title">{% trans "Details" %}</h3>
     </div>
     <div class="panel-body">
       <div class="row">
         <div class="col-md-8">
           <dl class="dl-horizontal">
-            <dt>Added</dt>
+            <dt>{% trans "Added" %}</dt>
             <dd>{{ bounty.added_date|date:"D d M Y" }} {{ bounty.added_date|time:"H:i" }}</dd>
-            <dt>Updated</dt>
+            <dt>{% trans "Updated" %}</dt>
             <dd>{{ bounty.updated_date|date:"D d M Y" }} {{ bounty.updated_date|time:"H:i" }}</dd>
-            <dt>Region</dt>
+            <dt>{% trans "Region" %}</dt>
             <dd>{{ bounty.region_display }}</dd>
-            <dt>Status</dt>
+            <dt>{% trans "Status" %}</dt>
             <dd>{{ bounty.status_display }}</dd>
-            <dt>Author</dt>
+            <dt>{% trans "Author" %}</dt>
             <dd>{{ bounty.source_character }} - {{ bounty.source_realm_display }}</dd>
-            <dt>Target</dt>
+            <dt>{% trans "Target" %}</dt>
             <dd>{{ bounty.destination_character }} - {{ bounty.destination_realm_display }}</dd>
           </dl>
         </div>
@@ -43,18 +44,18 @@
   </div>
   <div class="panel panel-info">
     <div class="panel-heading">
-      <h3 class="panel-title">Reward</h3>
+      <h3 class="panel-title">{% trans "Reward" %}</h3>
     </div>
     <div class="panel-body" id="bounty-reward">{{ bounty.reward }}</div>
   </div>
   <div class="panel panel-info">
     <div class="panel-heading">
-      <h3 class="panel-title">Description</h3>
+      <h3 class="panel-title">{% trans "Description" %}</h3>
     </div>
     <div class="panel-body" id="bounty-description">{{ bounty.description }}</div>
   </div>
 {% else %}
-  <p>Bounty not found.</p>
+  <p>{% trans "Bounty not found." %}</p>
 {% endif %}
 {% endblock %}
 
