--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,5 @@
+{% load i18n %}
 <div class="row">
 	<hr>
-	<em>HeadHunter for World of Warcraft</em>
+	<em>{% trans "HeadHunter for World of Warcraft" %}</em>
 </div>
