--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+{% load i18n %}
 {% load staticfiles %}
-<html lang="en">
+<!DOCTYPE html>
+<html lang="{{ LANG }}">
 <head>
   <title>HeadHunter</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'headhunter/css/bootstrap.min.css' %}">
 </head>
 <body>
 	{% include "header.html" %}
@@ -12,11 +13,25 @@
     {% block content %}{% endblock %}
     {% include "footer.html" %}
   </div>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="{% static 'headhunter/js/showdown.min.js' %}"></script>
+  <script src="{% static 'headhunter/js/jquery-2.1.3.min.js' %}"></script>
+  <script src="{% static 'headhunter/js/jquery.i18n.js' %}"></script>
+  <script src="{% static 'headhunter/js/jquery.i18n.messagestore.js' %}"></script>
+  <script src="{% static 'headhunter/js/jquery.i18n.fallbacks.js' %}"></script>
+  <script src="{% static 'headhunter/js/jquery.i18n.parser.js' %}"></script>
+  <script src="{% static 'headhunter/js/jquery.i18n.emitter.js' %}"></script>
+  <script src="{% static 'headhunter/js/jquery.i18n.language.js' %}"></script>
 	{% block javascripts %}{% endblock %}
   <script>
     $(function() {
+      $.i18n().load({
+        'fr': {
+        },
+        'en': {
+        }
+      });
+      $('*[data-i18n]').i18n()
+
       $.ajax({
         url: "/api/player-battletag",
         dataType: 'json',
