--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,11 @@
+{% load i18n %}
 {% load staticfiles %}
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
+        <span class="sr-only">{% trans "Toggle navigation" %}</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -14,18 +15,30 @@
     <div class="collapse navbar-collapse">
     	<ul class="nav navbar-nav navbar-left">
     		{% if user.is_authenticated %}
-        		<button disabled="disabled" type="button" class="btn btn-default navbar-btn battletag">Loading data from Blizzard...</button>
+        		<button disabled="disabled" type="button" class="btn btn-default navbar-btn battletag">{% trans "Loading data from Blizzard..." %}</button>
         	{% endif %}
     	</ul>
     	<ul class="nav navbar-nav navbar-right">
     	{% if not user.is_authenticated %}
-			<li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">Sign in</a></li>
+			<li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">{% trans "Sign in" %}</a></li>
 		{% else %}
-        	<li><a href="{% url 'bounty-list' %}">Bounties</a></li>
-        	<li><a href="{% url 'bounty-add' %}">Add</a></li>
-        	<li><a href="{% url 'logout' %}">Logout</a></li>
+        	<li><a href="{% url 'bounty-list' %}">{% trans "Bounties" %}</a></li>
+        	<li><a href="{% url 'bounty-add' %}">{% trans "Add" %}</a></li>
+        	<li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
 		{% endif %}
       </ul>
     </div>
   </div>
  </nav>
+
+{% get_current_language as LANGUAGE_CODE %}
+{{ LANGUAGE_CODE }}
+<form action="/i18n/setlang/" method="post">
+  {% csrf_token %}
+  <select name="language">
+  {% for lang in LANGUAGES %}
+    <option value="{{ lang.0 }}">{{ lang.1 }}</option>
+  {% endfor %}
+  </select> 
+  <button type="submit">Change</button>
+</form> 
