--- a/templates/header.html
+++ b/templates/header.html
@@ -19,13 +19,23 @@
         	{% endif %}
     	</ul>
     	<ul class="nav navbar-nav navbar-right">
-    	{% if not user.is_authenticated %}
-			<li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">{% trans "Sign in" %}</a></li>
-		{% else %}
+      	{% if not user.is_authenticated %}
+  			  <li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">{% trans "Sign in" %}</a></li>
+  		  {% else %}
         	<li><a href="{% url 'bounty-list' %}">{% trans "Bounties" %}</a></li>
-        	<li><a href="{% url 'bounty-add' %}">{% trans "Add" %}</a></li>
-        	<li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
-		{% endif %}
+         	<li>
+            <a href="{% url 'bounty-add' %}">
+              <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
+              {% trans "Add bounty" %}
+            </a>
+          </li>
+        	<li>
+            <a href="{% url 'logout' %}">
+              <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+                {% trans "Logout" %}
+            </a>
+          </li>
+  		  {% endif %}
       </ul>
     </div>
   </div>
