--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
   </div>
   <script src="{% static 'headhunter/js/showdown.min.js' %}"></script>
   <script src="{% static 'headhunter/js/jquery-2.1.3.min.js' %}"></script>
+  <script src="{% static 'headhunter/js/bootstrap.min.js' %}"></script>
   <script src="{% static 'headhunter/js/jquery.i18n.js' %}"></script>
   <script src="{% static 'headhunter/js/jquery.i18n.messagestore.js' %}"></script>
   <script src="{% static 'headhunter/js/jquery.i18n.fallbacks.js' %}"></script>
@@ -31,6 +32,15 @@
         }
       });
       $('*[data-i18n]').i18n()
+
+      // Language switcher
+      $("ul#language-switcher li a").click(function() {
+        var lang = $(this).attr('value');
+        $('<form action="/i18n/setlang/" method="POST">' +
+          "{% csrf_token %}" + 
+          '<input type="hidden" name="language" value="' + lang + '">' +
+          '</form>').submit();
+      });
 
       $.ajax({
         url: "/api/player-battletag",
