--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,14 @@
 {% load i18n %}
+{% load compress %}
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="{{ LANG }}">
 <head>
   <title>HeadHunter</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="{% static 'headhunter/css/bootstrap.min.css' %}">
+  {% compress css %}
+    <link rel="stylesheet" type="text/css" href="{% static 'headhunter/css/bootstrap.min.css' %}">
+  {% endcompress %}
 </head>
 <body>
 	{% include "header.html" %}
@@ -13,15 +16,18 @@
     {% block content %}{% endblock %}
     {% include "footer.html" %}
   </div>
-  <script src="{% static 'headhunter/js/showdown.min.js' %}"></script>
-  <script src="{% static 'headhunter/js/jquery-2.1.3.min.js' %}"></script>
-  <script src="{% static 'headhunter/js/bootstrap.min.js' %}"></script>
-  <script src="{% static 'headhunter/js/jquery.i18n.js' %}"></script>
-  <script src="{% static 'headhunter/js/jquery.i18n.messagestore.js' %}"></script>
-  <script src="{% static 'headhunter/js/jquery.i18n.fallbacks.js' %}"></script>
-  <script src="{% static 'headhunter/js/jquery.i18n.parser.js' %}"></script>
-  <script src="{% static 'headhunter/js/jquery.i18n.emitter.js' %}"></script>
-  <script src="{% static 'headhunter/js/jquery.i18n.language.js' %}"></script>
+  {% compress js %}
+    <script src='https://www.google.com/recaptcha/api.js'></script>
+    <script src="{% static 'headhunter/js/showdown.min.js' %}"></script>
+    <script src="{% static 'headhunter/js/jquery-2.1.3.min.js' %}"></script>
+    <script src="{% static 'headhunter/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'headhunter/js/jquery.i18n.js' %}"></script>
+    <script src="{% static 'headhunter/js/jquery.i18n.messagestore.js' %}"></script>
+    <script src="{% static 'headhunter/js/jquery.i18n.fallbacks.js' %}"></script>
+    <script src="{% static 'headhunter/js/jquery.i18n.parser.js' %}"></script>
+    <script src="{% static 'headhunter/js/jquery.i18n.emitter.js' %}"></script>
+    <script src="{% static 'headhunter/js/jquery.i18n.language.js' %}"></script>
+  {% endcompress %}
 	{% block javascripts %}{% endblock %}
   <script>
     $(function() {
