--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -20,8 +20,10 @@
     </div>
     <div class="panel-body">
       <div class="row">
-      <div class="col-md-1">
-          <!-- <img class="pull-left" src="{{ bounty.destination_thumbnail }}"> -->
+        <div class="col-md-1">
+          <a href="{{ bounty.destination_armory }}" target="_blank">
+            <img class="pull-left" src="{{ bounty.destination_thumbnail }}">
+          </a>
         </div>
         <div class="col-md-11">
           <dl class="dl-horizontal">
@@ -47,64 +49,68 @@
     <div class="panel-heading">
       <h3 class="panel-title">{% trans "Reward" %}</h3>
     </div>
-    <div class="panel-body" id="bounty-reward">{{ bounty.reward }}</div>
+    <div class="panel-body" id="bounty-reward">{{ bounty.reward|safe }}</div>
   </div>
   <div class="panel panel-info">
     <div class="panel-heading">
       <h3 class="panel-title">{% trans "Description" %}</h3>
     </div>
-    <div class="panel-body" id="bounty-description">{{ bounty.description }}</div>
+    <div class="panel-body" id="bounty-description">{{ bounty.description|safe }}</div>
   </div>
   <hr>
   <div id="comments">
-    <h3>{% trans "Comments" %}</h3>
-    <form id="comment-form">
-      <label
-          id="player-characters-label"
-          for="player-characters"
-          style="display:none">
-        {% trans "Your character" %}
-      </label>
-      <select
-        class="form-control"
-        id="player-characters"
-        style="display:none">
-        <option value="">---</option>
-      </select>
-      <br>
-      <label
-          for="reward"
-          id="comment-input-label"
-          style="display:none">
-        {% trans "Comment" %}
-      </label>
-      <small class="help" style="display:none">
-        <p class="help-block">{% trans "Markdown allowed. You can only post imgur.com urls." %}</p>
-      </small>
-      <textarea
-          class="form-control"
-          id="comment-input"
-          style="display:none"
-          rows="4"
-          cols="50"></textarea>
-      <br>
-      <div id="g-captcha" class="pull-left g-recaptcha" data-sitekey="6LeMMgQTAAAAAI_ZCxiJJcZOf0RTC-SYBrge8gRD"></div>
-      <button
-          class="btn btn-success pull-right"
-          id="comment-save"
-          style="display:none">
-        {% trans "Publish" %}
+    <h3>{% trans "Comments" %} <small>{% if bounty.comments.count %}({{ bounty.comments.count }}){% endif %}</small></h3> 
+      <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#addCommentCollapse" aria-expanded="false" aria-controls="collapseExample">
+        {% trans "Add a comment" %} <span class="caret"></span>
       </button>
-      <div class="clearfix"></div>
-    </form>
-    <hr>
+      <div class="collapse" id="addCommentCollapse">
+        <br>
+        <form id="comment-form" style="display:none">
+          <label id="player-characters-label" for="player-characters">
+            {% trans "Your character" %}
+          </label>
+          <select class="form-control" id="player-characters">
+            <option value="">---</option>
+          </select>
+          <br>
+          <label for="reward" id="comment-input-label">
+            {% trans "Comment" %}
+          </label>
+          <small class="help">
+            <p class="help-block">{% trans "Markdown allowed but images and raw html won't be rendered." %}</p>
+          </small>
+          <textarea
+              class="form-control"
+              id="comment-input"
+              rows="4"
+              cols="50"></textarea>
+          <br>
+          <div id="g-captcha" class="pull-left g-recaptcha" data-sitekey="6LeMMgQTAAAAAI_ZCxiJJcZOf0RTC-SYBrge8gRD"></div>
+          <button class="btn btn-success pull-right" data-loading-text="{% trans 'Loading...' %}" id="comment-save">
+            {% trans "Publish" %}
+          </button>
+          <div class="clearfix"></div>
+        </form>
+        <hr>
+      </div>
+    <br>
+    <br>
     {% for comment in bounty.comments.objects %}
       <div class="panel panel-default">
         <div class="panel-heading">
           {{ comment.character_name }} - {{ comment.character_realm_display }}
           <small>{{ comment.added_date|date:"D d M Y" }} {{ comment.added_date|time:"H:i" }}</small>
         </div>
-        <div class="panel-body comment-text">{{ comment.text }}</div>
+        <div class="panel-body comment-body">
+          <div class="media">
+            <div class="media-left media-top">
+              <a href="{{ comment.character_armory }}" target="_blank">
+                <img class="media-object" src="{{ comment.character_thumbnail }}" style="height:60%; width:auto;">
+              </a>
+            </div>
+            <div class="media-body comment-text">{{ comment.text|safe }}</div>
+          </div>
+        </div>
       </div>
     {% endfor %}
   </div>
@@ -116,14 +122,8 @@
 {% block javascripts %}
   <script>
     $(function() {
-      var converter = new Showdown.converter();
-      $("#bounty-description").html(converter.makeHtml($("#bounty-description").text()));
-      $("#bounty-reward").html(converter.makeHtml($("#bounty-reward").text()));
-      $("div.comment-text").map(function() {
-        $(this).html(converter.makeHtml($(this).text()));
-      });
-
       function saveComment() {
+        $("button#comment-save").button("loading");
         var character = $("select#player-characters").val()
         var characterRealm = character.split('|')[1];
         var characterName = character.split('|')[2];
@@ -132,12 +132,14 @@
 
         var errorMessage = '';
         if (!characterName || !characterRealm)
-          errorMessage += '\n- Need a character to comment.';
+          errorMessage += '\n- {% trans "Need a character to comment." %}';
         if (!comment)
-          errorMessage += '\n- Comment can not be empty.';
-
+          errorMessage += '\n- {% trans "Comment can not be empty." %}';
+        if (!captcha)
+          errorMessage += '\n- {% trans "Missing captcha." %}';
         if (errorMessage) {
-          alert("Comment is incorrect:\n" + errorMessage);
+          alert("{% trans 'Comment is incorrect' %}:\n" + errorMessage);
+          $("button#comment-save").button("reset");
           return;
         }
 
@@ -168,10 +170,11 @@
               errorMessage += '\n- ' + jsonResponse.reason;
             }
             if (!errorMessage)
-              errorMessage = '\n- Unknown error';
+              errorMessage = '\n- {% trans "Unknown error" %}';
 
-            alert("Comment is incorrect:\n" + errorMessage);
+            alert("{% trans 'Comment is incorrect' %}:\n" + errorMessage);
             console.error("/api/bounty/{{ bounty.id }}/comment", status, err.toString());
+            $("button#comment-save").button("reset");
           }
         }); 
       };
@@ -187,11 +190,7 @@
                 "|"  + val.name + "\">" + val.name + " - " + val.realm +
                 " (" + val.level + ") </option>");
             });
-            $("select#player-characters").css("display", "block");
-            $("label#player-characters-label").css("display", "block");
-            $("label#comment-input-label").css("display", "block");
-            $("textarea#comment-input").css("display", "block");
-            $("button#comment-save").css("display", "block");
+            $("form#comment-form").css("display", "block");
             if (callback)
               callback();
           },
