--- a/templates/header.html
+++ b/templates/header.html
@@ -16,8 +16,10 @@
     <div class="collapse navbar-collapse">
     	<ul class="nav navbar-nav navbar-left">
     		{% if user.is_authenticated %}
-        		<button disabled="disabled" type="button" class="btn btn-default navbar-btn battletag">{% trans "Loading data from Blizzard..." %}</button>
-        	{% endif %}
+          <div class="nav navbar-text progress" style="width:270px;margin-top:9px;margin-bottom:-9px;height:30px">
+            <div class="progress-bar progress-bar-warning progress-bar-striped active battletag" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%;padding-top:5px;font-weight:bold;font-size:90%">{% trans "Loading data from Blizzard..." %}</div>
+          </div>  
+      	{% endif %}
     	</ul>
     	<ul class="nav navbar-nav navbar-right">
       	{% if not user.is_authenticated %}
@@ -30,14 +32,6 @@
               {% trans "Add bounty" %}
             </a>
           </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{% trans "Language" %} <span class="caret"></span></a>
-            <ul id="language-switcher" class="dropdown-menu" role="menu">
-              {% for lang in LANGUAGES %}
-                <li><a href="#" value="{{ lang.0 }}">{{ lang.1 }}</a></li>
-              {% endfor %}
-            </ul>
-          </li>
         	<li>
             <a href="{% url 'logout' %}">
               <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
@@ -45,6 +39,14 @@
             </a>
           </li>
   		  {% endif %}
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{% trans "Language" %} <span class="caret"></span></a>
+            <ul id="language-switcher" class="dropdown-menu" role="menu">
+              {% for lang in LANGUAGES %}
+                <li><a href="#" value="{{ lang.0 }}">{{ lang.1 }}</a></li>
+              {% endfor %}
+            </ul>
+          </li>
       </ul>
     </div>
   </div>
