Update footer sentence

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 <div class="row">
 	<hr>
-	<em>{% trans "HeadHunter for World of Warcraft" %}</em>
+	<em>{% trans "Bounty-O-Matic for World of Warcraft by Bodoc-Conseil des Ombres (Légion de Stormwind)" %}</em>
 </div>
