--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load staticfiles %}
 {% get_current_language as LANGUAGE_CODE %}
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -11,13 +11,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'home' %}">HeadHunter</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Bounty-O-Matic </a>
     </div>
     <div class="collapse navbar-collapse">
     	<ul class="nav navbar-nav navbar-left">
     		{% if user.is_authenticated %}
-          <div class="nav navbar-text progress" style="width:270px;margin-top:9px;margin-bottom:-9px;height:30px">
-            <div class="progress-bar progress-bar-warning progress-bar-striped active battletag" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%;padding-top:5px;font-weight:bold;font-size:90%">{% trans "Loading data from Blizzard..." %}</div>
+          <div class="nav navbar-text progress" style="width:270px;margin-top:14px;margin-bottom:-14px;height:30px">
+            <div class="progress-bar progress-bar-warning progress-bar-striped active battletag" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%;padding-top:8px;font-weight:bold;font-size:90%">{% trans "Loading data from Blizzard..." %}</div>
           </div>  
       	{% endif %}
     	</ul>
@@ -25,8 +25,8 @@
       	{% if not user.is_authenticated %}
   			  <li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">{% trans "Sign in" %}</a></li>
   		  {% else %}
-        	<li><a href="{% url 'bounty-list' %}">{% trans "Bounties" %}</a></li>
-         	<li>
+        	<li class="{% if request.path == '/bounty/' %}active{% endif %}"><a href="{% url 'bounty-list' %}">{% trans "Bounties" %}</a></li>
+         	<li class="{% if request.path == '/bounty/add' %}active{% endif %}">
             <a href="{% url 'bounty-add' %}">
               <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
               {% trans "Add bounty" %}
